[package]
name = "rust-derive-macro-demo"
version = "0.1.0"
authors = ["Kilerd <blove694@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "detail_error"]

[dependencies]
detail_error = {path="./detail_error"}