[package]
name = "detail_error"
version = "0.1.0"
authors = ["Kilerd <blove694@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.31"
quote = "1.0.7"
darling = "0.10.2"
proc-macro2 = "1.0.18"
Inflector = "0.11.4"
